# gpweasel

./: CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: rust.yml
src/: cli.rs  convert_args.rs  duration.rs  error.rs  main.rs  output.rs  severity.rs  util.rs
src/aggregators/: connections.rs  error_frequency.rs  error_histogram.rs  mod.rs  peaks.rs  stats.rs  top_slow_query.rs
src/filters/: filter_contains.rs  filter_slow.rs  locking_filter.rs  mod.rs  system_filter.rs
src/format/: csv.rs  mod.rs  plain.rs
src/output_results/: mod.rs
testdata/: csvlog1.csv  csvlog2.csv  csvlog3.csv  csvlog_pg12.csv  csvlog_pg13.csv  pgbench.json
tests/: connections.rs  errors.rs  help.rs  locks.rs  slow.rs  stats_peaks.rs  system.rs
tests/files/: csvlog_pg14.csv  gpdb_sample.csv  multiple_lines.csv
