[package]
name = "gpweasel"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
once_cell = "1.21.3"
log = "0.4.29"
env_logger = "0.11"
flate2 = "1.1.5"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
zip = "7.0.0"
derive_more = { version = "2.1.1", features = ["from"] }
memchr = "2.7.6"
memmap2 = "0.9.9"
rayon = "1.11.0"
humantime = "2.3.0"
aho-corasick = { version = "1.1.4", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
